# prek

./: Cargo.toml
crates/prek/: Cargo.toml
crates/prek/src/: config.rs
crates/prek/src/cli/: mod.rs
crates/prek_consts/: Cargo.toml
crates/prek_pty/: Cargo.toml
crates/prek_yaml/: Cargo.toml
src/: process.rs
src/languages/: docker.rs  docker_image.rs  script.rs  system.rs
src/languages/golang/: golang.rs
src/languages/node/: node.rs
src/languages/pygrep/: pygrep.rs
src/languages/python/: python.rs
