[workspace]
resolver = "2"
members = [
    "crates/prek",
	"crates/prek_consts",
	"crates/prek_pty",
	"crates/prek_yaml",
]

default-members = ["crates/prek"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

prek_consts = { path = "crates/prek_consts" }
prek_pty = { path = "crates/prek_pty" }
prek_yaml = { path = "crates/prek_yaml" }
prek = { path = "crates/prek" }

#
# External crates
#

serde_yaml = { version = "0.9.34" }
thiserror = { version = "2.0.11" }
tracing = { version = "0.1.40" }
anstream = { version = "0.6.15" }
anyhow = { version = "1.0.86" }
tokio = { version = "1.47.1" }
tokio-util = { version = "0.7.13" }

[patch.crates-io]
tokio = {  git = "https://github.com/CharlesChen0823/tokio.git", branch = "debug" }

[workspace.lints.rust]
dead_code = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[workspace.metadata.typos.default.extend-words]
edn = "edn"
styl = "styl"
jod = "jod"

[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false
codegen-units = 16

[profile.release]
# Enable Full LTO for the best optimizations
lto = "fat"
# Reduce codegen units to 1 for better optimizations
codegen-units = 1
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
